# GitHub-Graph

./: PHASE_10.md  PHASE_1_SOLUTIONING.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_6_SOLUTIONING.md  PHASE_7.md  PHASE_8.md  PHASE_9.md  PROJECT_END_TO_END_PLAN.md  README.md  STAGE_4_VERIFICATION.md
docs/: API_EXAMPLES.md  BENCHMARKS.md  (+8 more)
github-graph-analysis/: .env.example  Dockerfile  README.md  pyproject.toml
github-graph-analysis/app/: main.py
github-graph-analysis/app/analytics/: __init__.py  centrality.py  components.py  cycles.py  graph_projection.py  models.py  topology.py  traversal.py
github-graph-analysis/app/core/: config.py  exceptions.py
github-graph-analysis/github_graph_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
github-graph-analysis/tests/: test_analysis_route.py  test_analytics_route.py  test_bug_localizer.py  test_centrality.py  test_components.py  test_cycles.py  test_evidence_selector.py  test_explanation_service.py  test_explanations_route.py  test_failure_history_store.py  test_failure_path_parser.py  test_gemini_client.py  test_graph_analytics_service.py  test_graph_analyzer.py  test_graph_feature_extractor.py  test_graph_planner.py  test_graph_projection.py  test_grounded_explanations_route.py  test_grounded_query_service.py  test_intelligence_routes.py  test_phase6_schemas.py  test_phase7_schemas.py  test_prompt_builder.py  test_query_router.py  test_response_parser.py  test_similarity_clustering.py  test_similarity_engine.py  test_static_code_extractor.py  test_topology.py  test_traversal.py
(+230 files in other folders)
