[project]
name = "github-graph-analysis"
version = "0.1.0"
description = "Analysis engine for GitHub Graph"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.12.5",
  "google-genai==2.12.1"
]

[project.optional-dependencies]
test = [
  "httpx==0.28.1"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
